fixed cats images sizes

--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 html {
   background-color: aqua;
 }
+div>img:nth-child(1) {
+  height:100px;
+  width:100px;
+}
+div>img:nth-child(2) {
+  height:100px;
+  width:100px;
+}
